add vs-convert executable

--- a/source/vtk/CMakeLists.txt
+++ b/source/vtk/CMakeLists.txt
@@ -1,8 +1,5 @@
 set(spirit_parse_source_dir ${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/spirit_parse)
 
-
-
-
 set(base_srcs  ${spirit_parse_source_dir}/rdiParser.cpp
                                     ${spirit_parse_source_dir}/BoostSpiritInputFile.cpp
                                     ${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/interpolation/Interpolation.cpp
@@ -15,7 +12,7 @@ set(base_srcs  ${spirit_parse_source_dir}/rdiParser.cpp
 				    )
 
 
-
+# include vtk
 find_package(VTK REQUIRED)
 if(NOT VTK_USE_RENDERING)
   message(FATAL_ERROR "${PROJECT_NAME} requires VTK_USE_RENDERING.")
@@ -26,6 +23,9 @@ include_directories( ${read_visualsonics_digital_rf_SOURCE_DIR}/source
   )
 link_directories( ${VTK_LIBRARY_DIRS} )
 
+
+# vs-vtk-viewer, a simple cli viewer for examining Visual Sonics
+# .rdi/.rdb files
 set( vs-vtk-viewer_srcs ${base_srcs}
   ${read_visualsonics_digital_rf_SOURCE_DIR}/source/vtk/vtkVisualSonicsReader.cpp
   ${read_visualsonics_digital_rf_SOURCE_DIR}/source/vtk/ImageViewer.cpp
@@ -34,4 +34,22 @@ set( vs-vtk-viewer_srcs ${base_srcs}
 
 add_executable( vs-vtk-viewer ${vs-vtk-viewer_srcs} )
 target_link_libraries( vs-vtk-viewer vtkRendering vtkVolumeRendering boost_filesystem)
+
+
+
+# vs-convert, a simple cli app to convert Visual Sonics .rdi/.rdb files to
+# other image formats
+set( vs-convert_srcs ${base_srcs}
+  ${read_visualsonics_digital_rf_SOURCE_DIR}/source/vtk/vtkVisualSonicsReader.cpp
+  ${read_visualsonics_digital_rf_SOURCE_DIR}/source/vtk/vs-convert.cpp
+  )
+
+add_executable( vs-convert ${vs-convert_srcs} )
+target_link_libraries( vs-vtk-viewer boost_filesystem)
+
+
+install( TARGETS vs-vtk-viewer vs-convert
+  DESTINATION bin
+  )
+
 
