do not compile the start.cpp which was being used for itk hacking

--- a/source/itk/CMakeLists.txt
+++ b/source/itk/CMakeLists.txt
@@ -27,14 +27,14 @@ else( ITK_FOUND )
 endif( ITK_FOUND )
 
 
-add_executable( start
-  start.cpp
-  )
+#add_executable( start
+  #start.cpp
+  #)
 
-target_link_libraries( start
-  ITKCommon
-  ITKIO
-  ITKAlgorithms
-  boost_filesystem
-  parse_vs_rdi
-  )
+#target_link_libraries( start
+  #ITKCommon
+  #ITKIO
+  #ITKAlgorithms
+  #boost_filesystem
+  #parse_vs_rdi
+  #)
