integrate python unittest and CTest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,17 +6,18 @@ endif(COMMAND cmake_policy)
 
 project(read_visualsonics_digital_rf)
 
-include(CTest)
 
+include(CTest)
 if(BUILD_TESTING)
   if(NOT EXISTS ${read_visualsonics_digital_rf_SOURCE_DIR}/test_data/.git)
     message(SEND_ERROR "In order to run tests, the test_data must be
     downloaded.  Try 'git submodule init && git submodule update' in the source
-    directory.")
+    directory.  If you do not want to run tests, turn BUILD_TESTING OFF.")
   endif(NOT EXISTS ${read_visualsonics_digital_rf_SOURCE_DIR}/test_data/.git)
+  enable_testing()
+  add_subdirectory(tests)
 endif(BUILD_TESTING)
 
-enable_testing()
 
 ###########  Install Prefix ############
 SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/..
@@ -80,9 +81,4 @@ set( CMAKE_RUNTIME_OUTPUT_DIRECTORY
 ########### set up addition CMakeLists.txt locations #########
 #ADD_SUBDIRECTORY(matlab)
 add_subdirectory(source)
-
-#include(CTest)
-#if(BUILD_TESTING)
-  #add_subdirectory(tests)
-#endif(BUILD_TESTING)
 
