--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,7 @@
+add_test(format_evaluator
+  ${read_visualsonics_digital_rf_SOURCE_DIR}/tests/python_unittests.py
+  FormatEvaluatorSuite ${read_visualsonics_digital_rf_SOURCE_DIR})
+
 set(spirit_parse_source_dir ${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/spirit_parse)
 
 
