start creation of XercesDOMParser

--- a/source/common/CMakeLists.txt
+++ b/source/common/CMakeLists.txt
@@ -1,3 +1,6 @@
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/modules)
+message(STATUS "module path: ${CMAKE_MODULE_PATH}")
+find_package(XercesC REQUIRED)
 #set(spirit_parse_source_dir ${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/spirit_parse)
 
 
@@ -25,6 +28,7 @@ add_executable(rdi2xml
   rdi2xml.cpp
   rdiReader.cpp
   )
+target_link_libraries(rdi2xml ${XERCESC_LIBRARIES})
 
 set(ANALYZE_RDI_FORMAT OFF CACHE BOOL
   "Analyze rdi format from example sources to generate parsing code.")
