--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "test_data"]
-	path = test_data
+[submodule "data_for_tests"]
+	path = data_for_tests
 	url = git://128.104.2.60/test_data
