Extract Image Parameters
units too

--- a/source/common/formats/CMakeLists.txt
+++ b/source/common/formats/CMakeLists.txt
@@ -8,26 +8,19 @@ set(MODEL_RDI
   "The *rdi that is used as a model to define the rdi format/content.")
 mark_as_advanced(MODEL_RDI)
 
-#add_custom_command(
-  #OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/rdi.xsd
 add_custom_target(format_evaluator ALL
   ${CMAKE_CURRENT_SOURCE_DIR}/format_evaluator.py
   ${MODEL_RDI}
   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/format_evaluator.py
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMENT "Generating rdi format schema from ${MODEL_RDI}."
   )
 
 add_custom_command(
-  #OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/rdi.cxx
   TARGET format_evaluator
+  POST_BUILD
   COMMAND ${XSD_EXECUTABLE} ${XSD_ARGS} ${CMAKE_CURRENT_SOURCE_DIR}/rdi.xsd
-  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/rdi.xsd
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMENT "Translating rdi.xsd into rdi.cxx/rdi.hxx."
   )
-
-#include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
-#add_executable( hello_driver hello.cxx
-  #driver.cxx )
-#target_link_libraries( hello_driver ${XERCESC_LIBRARIES} )
-
 
