--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,6 @@
+find_package(GTest REQUIRED)
+include_directories(${GTEST_INCLUDE_DIRS})
+
 add_test(format_evaluator
   ${read_visualsonics_digital_rf_SOURCE_DIR}/tests/python_unittests.py
   FormatEvaluatorSuite)
