make and pass tests on IMAGE INFO section

--- a/source/common/formats/CMakeLists.txt
+++ b/source/common/formats/CMakeLists.txt
@@ -8,16 +8,16 @@ set(MODEL_RDI
   "The *rdi that is used as a model to define the rdi format/content.")
 mark_as_advanced(MODEL_RDI)
 
-add_custom_target(format_evaluator ALL
-  ${CMAKE_CURRENT_SOURCE_DIR}/format_evaluator.py
+add_custom_target(format-evaluator ALL
+  ${CMAKE_CURRENT_SOURCE_DIR}/format-evaluator.py
   ${MODEL_RDI}
-  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/format_evaluator.py
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/format-evaluator.py
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   COMMENT "Generating rdi format schema from ${MODEL_RDI}."
   )
 
 add_custom_command(
-  TARGET format_evaluator
+  TARGET format-evaluator
   POST_BUILD
   COMMAND ${XSD_EXECUTABLE} ${XSD_ARGS} ${CMAKE_CURRENT_SOURCE_DIR}/rdi.xsd
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
