--- a/tests/xml/CMakeLists.txt
+++ b/tests/xml/CMakeLists.txt
@@ -22,6 +22,25 @@ set_tests_properties(
 if(BUILD_RDI2HTML)
 # rdi2html tests
   add_test(
+    rdi2html
+
+    ${read_visualsonics_digital_rf_BINARY_DIR}/bin/rdi2html
+    ${RDI_TESTING_FILEPATH}
+    rdi2html_test_output.html
+    )
+
+  add_test(
+    rdi2html_invalid_file
+
+    ${read_visualsonics_digital_rf_BINARY_DIR}/bin/rdi2html
+    filepath_that_does_not_exist.rdi
+    )
+  set_tests_properties(
+    rdi2html_invalid_file
+    PROPERTIES WILL_FAIL TRUE
+    )
+
+  add_test(
     xalan_comparison
 
     ${read_visualsonics_digital_rf_SOURCE_DIR}/tests/xml/xalan_comparison
